fix stars on smaller screens

--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -12,6 +12,15 @@
   // align-items: center;
   // align-content: center;
 
+  i {
+    visibility: hidden;
+    position: absolute;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff, 0 0 80px #fff;
+    animation: animate linear infinite;
+  }
+
   .name-container {
     font-family: $primary-font;
     text-align: center;
@@ -46,6 +55,14 @@
     align-self: flex-end;
     margin-right: 1rem;
     z-index: 3;
+  }
+}
+
+@media (min-width: 700px) {
+  .home {
+    i {
+      visibility: visible;
+    }
   }
 }
 
@@ -133,16 +150,6 @@
 @media (min-width: 1250px) {
   .home {
     background-position-y: bottom;
-  }
-}
-
-.home {
-  i {
-    position: absolute;
-    background: #fff;
-    border-radius: 50%;
-    box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff, 0 0 80px #fff;
-    animation: animate linear infinite;
   }
 }
 
